--- a/CharityFundingPredictor_OptimizeModel.ipynb
+++ b/CharityFundingPredictor_OptimizeModel.ipynb
@@ -971,13 +971,7 @@
       "804/804 [==============================] - 1s 2ms/step - loss: 0.4070 - accuracy: 0.8075\n",
       "Epoch 80/100\n",
       "804/804 [==============================] - 1s 2ms/step - loss: 0.4077 - accuracy: 0.8063\n",
-      "Epoch 81/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 81/100\n",
       "804/804 [==============================] - 1s 1ms/step - loss: 0.4074 - accuracy: 0.8075\n",
       "Epoch 82/100\n",
       "804/804 [==============================] - 1s 2ms/step - loss: 0.4072 - accuracy: 0.8072\n",
@@ -1072,8 +1066,8 @@
     "This means we are able to correctly classify each of the points in the test data 78% of the time. In other words an applicant has a close to 80% chance of being successful if they have the following:\n",
     "\n",
     "- The NAME of the applicant appears more than 5 times (they have applied more than 5 times)\n",
-    "- The type of APPLICATION is one of the following; T3, T4, T5, T6, T7, T8, T10, and T19\n",
-    "- The application has the following CLASSIFICATION; C1000, C2000, C3000, C1200, and C2100.\n",
+    "- The type of APPLICATION is one of the following: T3, T4, T5, T6 and T19\n",
+    "- The application has the following values for CLASSIFICATION: C1000, C1200, C2000,C2100 and C3000.\n",
     "-----\n",
     "#### Alternative Model\n",
     "An alternative model to recommend is the Random Forest model as it is suited for classification problems. As can be seen below, using the Random Forest model we can achieve ~78% accuracy. "
